# mimic-grapheme

./: ACKNOWLEDGEMENTS  COPYING  README.md  meson.build
src/: mimic_grapheme_plugin.c
src/cmu_grapheme_lang/: cmu_grapheme_lang.c
src/cmu_grapheme_lex/: grapheme_unitran_tables.c
